Support java 8 again